--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				</div>
 </div>
                                 <div class="home_text_left col-xs-12 col-md-9">
-                                                <div class="head_center col-xs-12"><h2>I'm <br><span> S</span>ubhadip<span>C</span>Dey<br><small>Beginner programmer</small></h2></div>
+                                                <div class="head_center col-xs-12"><h2>I'm <br><span> S</span>ubhadip<span>D</span>ey<br><small>Beginner programmer</small></h2></div>
                                 </div>
 <div class="top_nav col-xs-12">
 		<span class="glyphicon glyphicon-menu-down down_icon"></span>
